--- a/services/go-dev/Dockerfile
+++ b/services/go-dev/Dockerfile
@@ -8,73 +8,99 @@ ENV DEBIAN_NONINTERACTIVE_SEEN=true
 ENV container docker
 
 # INSTALL ESSENTIAL COMPONENTS
-RUN apt-get update && apt-get install -y --no-install-recommends \
-	build-essential \
-	software-properties-common \
-	gpg-agent \
-	init \
-	systemd-container \
-	net-tools \
-	sudo \
-	curl \
-	ca-certificates \
-	locales \
-	openssh-client \
-	iputils-ping \
-	apt-transport-https \
-	gnupg-agent \
-	inotify-tools \
-	libpq-dev \
-	libxmlsec1-dev
+RUN set -eux; \
+	apt-get update; \
+	apt-get install -y --no-install-recommends \
+		build-essential \
+		software-properties-common \
+		gpg-agent \
+		init \
+		systemd-container \
+		net-tools \
+		sudo \
+		curl \
+		ca-certificates \
+		locales \
+		openssh-client \
+		iputils-ping \
+		apt-transport-https \
+		gnupg-agent \
+		inotify-tools \
+		libpq-dev \
+		libxmlsec1-dev;
 
 # SET LOCALE
 ENV LANG en_US.UTF-8
-RUN locale-gen en_US.UTF-8 && update-locale LANG=en_US.UTF-8
+RUN set -eux; \
+	locale-gen en_US.UTF-8; \
+	update-locale LANG=en_US.UTF-8;
 
 # INSTALL DEV TOOLS
-RUN apt-get update && apt-get install -y --no-install-recommends \
-	vim \
-	zip \
-	tree \
-	groff \
-	bash-completion \
-	less \
-	git \
-	jq \
-	netcat \
-	sed \
-	wget \
-	bsdmainutils \
-	unzip \
-	plantuml \
-	graphviz \
-	kafkacat
+RUN set -eux; \
+	apt-get update; \
+	apt-get install -y --no-install-recommends \
+		vim \
+		zip \
+		tree \
+		groff \
+		bash-completion \
+		less \
+		git \
+		jq \
+		netcat \
+		sed \
+		wget \
+		bsdmainutils \
+		unzip \
+		plantuml \
+		graphviz \
+		kafkacat;
 
 # CREATE DEV USER
-RUN useradd --create-home -s /bin/bash dev && \
-	printf "\n[[ \"\$PWD\" == \"/\" ]] && cd\n" >> /home/dev/.bashrc && \
-	ln -s /home/dev/.profile /home/dev/.bash_profile && \
-	echo -n 'dev:dev' | chpasswd && \
-	echo 'dev ALL=NOPASSWD: ALL' > /etc/sudoers.d/dev && \
-	mkdir -p /home/dev/.ssh && \
-	chown -R dev:dev /home/dev/.ssh
+RUN set -eux; \
+	useradd --create-home -s /bin/bash dev; \
+	printf "\n[[ \"\$PWD\" == \"/\" ]] && cd\n" >> /home/dev/.bashrc; \
+	ln -s /home/dev/.profile /home/dev/.bash_profile; \
+	echo -n 'dev:dev' | chpasswd; \
+	echo 'dev ALL=NOPASSWD: ALL' > /etc/sudoers.d/dev; \
+	mkdir -p /home/dev/.ssh; \
+	chown -R dev:dev /home/dev/.ssh;
 
 COPY files/vimrc /home/dev/.vimrc
 
 # INSTALL SSH SERVER
-RUN apt-get update && apt-get install -y --no-install-recommends \
-	openssh-server && \
-	mkdir -p /var/run/sshd && \
-	chmod 0755 /var/run/sshd && \
-	echo "StrictHostKeyChecking no" >> /etc/ssh/ssh_config && \
-	sed -i 's/AcceptEnv/# AcceptEnv/' /etc/ssh/sshd_config
+RUN set -eux; \
+	apt-get update; \
+	apt-get install -y --no-install-recommends openssh-server; \
+	mkdir -p /var/run/sshd; \
+	chmod 0755 /var/run/sshd; \
+	echo "StrictHostKeyChecking no" >> /etc/ssh/ssh_config; \
+	sed -i 's/AcceptEnv/# AcceptEnv/' /etc/ssh/sshd_config;
+	
+# INSTALL PSQL (PostgreSQL client)
+ENV POSTGRES_SERVER pg-dev
+ENV POSTGRES_USER postgres
+ENV POSTGRES_DB dev
+RUN set -eux; \
+	echo "deb http://apt/postgresql.org/pub/repos/apt/ $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/postgres.list; \
+	apt-get update; \
+	apt-get install -y --no-install-recommends postgresql-client-12;
+RUN echo "export POSTGRES_SERVER=${POSTGRES_SERVER}" >> /etc/profile.d/pg.sh
+RUN echo "export POSTGRES_USER=${POSTGRES_USER}" >> /etc/profile.d/pg.sh
+RUN echo "export POSTGRES_DB=${POSTGRES_DB}" >> /etc/profile.d/pg.sh
+
+# INSTALL REDIS CLI
+RUN set -eux;
+	apt-get update; \
+	apt-get install -y --no-install-recommends redis-tools;
 	
 # INSTALL GO AND TOOLING
 ENV GOLANG_VERSION 1.18rc1
-RUN cd /tmp && \
-	wget https://go.dev/dl/go${GOLANG_VERSION}.linux-amd64.tar.gz && \
-	tar -xzvf go${GOLANG_VERSION}.linux-amd64.tar.gz -C /usr/local && \
-	rm -rf go${GOLANG_VERSION}.linux-amd64.tar.gz
+RUN set -eux; \
+	cd /tmp; \
+	wget https://go.dev/dl/go${GOLANG_VERSION}.linux-amd64.tar.gz; \
+	tar -xzvf go${GOLANG_VERSION}.linux-amd64.tar.gz -C /usr/local; \
+	rm -rf go${GOLANG_VERSION}.linux-amd64.tar.gz;
 
 ENV ROOT_GOROOT /usr/local/go
 ENV ROOT_GOBIN /usr/local/go/bin
@@ -83,8 +109,9 @@ ENV PATH "PATH=$PATH:$ROOT_GOBIN"
 
 RUN go env -w GOBIN=${ROOT_GOBIN} GOROOT=${ROOT_GOROOT} GOPRIVATE=${ROOT_GOPRIVATE}
 RUN su - dev -c "/usr/local/go/bin/go env -w GOPRIVATE=${ROOT_GOPRIVATE}"
-RUN echo "export GOROOT=${ROOT_GOROOT}" > /etc/profile.d/go.sh && \
-	echo 'export PATH=$PATH:'$ROOT_GOBIN:/home/dev/go/bin >> /etc/profile.d/go.sh
+RUN set -eux; \
+	echo "export GOROOT=${ROOT_GOROOT}" > /etc/profile.d/go.sh; \
+	echo 'export PATH=$PATH:'$ROOT_GOBIN:/home/dev/go/bin >> /etc/profile.d/go.sh;
 
 RUN curl -aSfl https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOROOT)/bin v1.44.2
 COPY files/golangci.yml /home/dev/.golangci.yml
@@ -98,7 +125,9 @@ RUN go install github.com/daixiang0/gci@latest
 # INSTALL TRIVY
 ENV TRIVY_VERSION 0.23.0
 RUN wget -nv https://github.com/aquasecurity/trivy/releases/download/v${TRIVY_VERSION}/trivy_${TRIVY_VERSION}_Linux-64bit.deb
-RUN apt-get update && apt install ./trivy_${TRIVY_VERSION}_Linux-64bit.deb	
+RUN set -eux; \
+	apt-get update; \ 
+	apt install ./trivy_${TRIVY_VERSION}_Linux-64bit.deb;
 
 # SET ENV TYPE
 ENV ENV_TYPE dev-env
